src/objects/Stamp_Duty_Calculators__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Method__c</fullName>
        <label>Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single rate</fullName>
                    <default>true</default>
                    <label>Single rate</label>
                </value>
                <value>
                    <fullName>Tiered rate</fullName>
                </value>
                <value>
                    <fullName>Escalating rate</fullName>
                </value>
                <value>
                    <fullName>WA special rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Per__c</fullName>
        <label>L1 Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L1_Rate__c</fullName>
        <label>L1 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L1_Value__c</fullName>
        <label>L1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2_Per__c</fullName>
        <label>L2 Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2_Rate__c</fullName>
        <label>L2 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2_Value__c</fullName>
        <label>L2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L3_Per__c</fullName>
        <label>L3 Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L3_Rate__c</fullName>
        <label>L3 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L3_Value__c</fullName>
        <label>L3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>                                        
    <label>Stamp Duty Calculators</label>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Stamp Duty Calculators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stamp Duty Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>